[package]
name = "ollama-code-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
ignore = "0.4.18"
serde_json = "1.0"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
mockito = "1.2.0"

[dev-dependencies]
tokio-test = "0.4.3"
